# NeuronGPU

./: .gitignore  INSTALL  INSTALLATION  INSTALL_README  Makefile  Makefile.am  Makefile.in  README.md  VERSION  config.h.in  configure  configure.ac  cuda_samples.sh  install.sh  make.sh  make.sh.full  make.sh.tmp  make_C.sh  make_gdb.sh  make_py.sh  patch.sh  patch_linux.sh  patch_macOS.sh  postinstall.sh  todo.txt  update_drivers.sh
c++/examples/: brunel_mpi.cpp  brunel_mpi_nx.cpp.old  brunel_net.cpp  brunel_outdegree.cpp  brunel_outdegree_mpi.cpp  brunel_tmp.cpp  brunel_vect.cpp  make_all.sh  make_brunel_mpi.sh  make_brunel_mpi_nx.sh  make_brunel_net.sh  make_brunel_outdegree.sh  make_brunel_outdegree_mpi.sh  make_brunel_tmp.sh  make_brunel_vect.sh  make_constcurr.sh  make_setvar.sh  make_test_aeif.sh  make_test_aeif_cond_beta.sh  make_test_connect.sh  make_test_error.sh  test_aeif.cpp  test_aeif_cond_beta.cpp  test_connect.cpp  test_constcurr.cpp  test_error.cpp  test_setvar.cpp
c++/tests/: make_test_connections.sh  make_test_neuron_groups.sh  test_connections.cpp  test_neuron_groups.cpp
deb/: add_to_repo.sh  build_package.sh  control.templ  depends.sh  info.txt  remove_package.sh  script.sh  sign.sh
examples/: brunel.cpp  brunel.cu  brunel_1M.cpp  brunel_1M.cu  brunel_200k.cpp  brunel_all_to_all.cpp  brunel_del_200k.cpp  brunel_del_50k.cpp  brunel_mpi.cpp  brunel_mpi.cu  brunel_mpi_nx.cpp  brunel_test.cpp  make_brunel.sh  make_brunel_1M.sh  make_brunel_200k.sh  make_brunel_all_to_all.sh  make_brunel_del_50k.sh  make_brunel_mpi.sh  make_brunel_mpi_nx.sh  make_brunel_test.sh  make_constcurr.sh  make_test_aeif_multisynapse.sh  test_aeif_multisynapse.cpp  test_aeif_multisynapse.cu  test_constcurr.cpp  test_constcurr.cu
examples/nest/: brunel.py  brunel_del_200k.py  test_aeif_cond_beta_multisynapse.sli  test_aeif_nest.py
examples2/: brunel_fpg_100k.cpp  brunel_fpg_200k.cpp  brunel_mpg.cpp  brunel_mpg_200k.cpp  make_brunel_fpg_100k.sh  make_brunel_fpg_200k.sh  make_brunel_mpg.sh  make_brunel_mpg_200k.sh  make_brunel_mpg_tmp.sh
examples2/nest/: brunel_100k.py  brunel_200k.py  brunel_20k.py  brunel_with_plots.py
examples2/poisson/: make_poisson.sh  test_poisson.cpp
examples3/: brunel_del_100k.cpp  brunel_del_100k.cpp.bk  brunel_del_200k.cpp  brunel_del_20k.cpp  make_brunel_del_100k.sh  make_brunel_del_200k.sh  make_brunel_del_20k.sh
homebrew/: neurongpu.rb
lib/: info.txt
m4/: ct_check_cuda.m4  ct_check_cuda_sdk.m4.tmp  pypath.m4
macOS/: README  info.txt  install.sh  nestgpu.rb  neurongpu.rb  uninstall.sh
macOS/lib/: info.txt
macOS/pythonlib/: nestgpu.py  neurongpu.py
python/: setenv.sh  test_error.py
python/Potjans_2014/: eval_microcircuit_time.py  helpers.py  log_time_10s_gtx1050mob.txt  log_time_10s_gtx1050mob_g_cde.txt  network.py  network_params.py  run_microcircuit.py  script.sh  script_eval_time.sh  sim_params.templ  sim_params_norec.py  sim_params_norec.templ
python/Potjans_2014_fast/: helpers.py  network.py  network_params.py  sim_params.py
python/Potjans_2014_g/: log_time_10s_gtx1050mob_b.txt  log_time_10s_gtx1050mob_g_cde.txt
python/Potjans_2014_hc/: README.rst  log_time_10s_gtx1050mob_cde.txt  network.py  network_params.py
python/Potjans_2014_s/: README.rst  eval_microcircuit_time.py  log_time_10s_gtx1050mob_b.txt  log_time_10s_gtx1050mob_c.txt  log_time_10s_gtx1050mob_ring_spike_buffer.txt  network.py  network_params.py  run_microcircuit.py  sim_params.py  sim_params_norec.py
python/examples/: balanced_izh.py  balanced_izh_cond_beta.py  balanced_izh_psc_exp_2s.py  balanced_izh_psc_exp_2s_eval_time.py  balanced_izh_psc_exp_5s.py  brunel_array.py  brunel_izh.py  brunel_izh_cond_alpha.py  brunel_izh_psc_exp.py  brunel_izh_psc_exp_2s.py  brunel_izikevich_cond_beta.py  brunel_list.py  brunel_mpi.py  brunel_net.py  brunel_outdegree.py  brunel_outdegree_mpi.py  brunel_tmp.py  example1.py  example2.py  log_connect.txt  log_setvar.txt  log_setvar2.txt  log_setvar3.txt  plot_aeif_cond_alpha.py  plot_aeif_cond_beta.py  plot_aeif_psc_alpha.py  plot_aeif_psc_delta.py  plot_aeif_psc_exp.py  plot_fast_iaf_psc_exp.py  plot_iaf_psc_exp.py  plot_iaf_psc_exp_g.py  plot_izh.py  plot_izh_cond_beta.py  stdp.py  test_aeif_cond_beta.py  test_connect.py  test_getarr.py  test_setvar.py  test_setvar3.py
python/lib/: neuralgpu.py  neurongpu.py
python/test/: err.py  err_mpi.py  log_connect.txt  log_getarr.txt  log_setvar.txt  log_setvar2.txt  log_setvar3.txt  log_syn_group.txt  logp2_getarr.txt  logp2_group_param.txt  logp2_setvar2.txt  logp3_connect.txt  logp3_getarr.txt  logp3_group_param.txt  logp3_setvar2.txt  logp3_setvar3.txt  logp3_syn_group.txt  parrot_neuron.py  plot_aeif_psc_delta.py  plot_stdp.m  test_aeif_cond_alpha.py  test_aeif_cond_alpha_nest.txt  test_aeif_cond_beta.py  test_aeif_cond_beta_nest.txt  test_aeif_psc_alpha.py  test_aeif_psc_alpha_nest.txt  test_aeif_psc_delta.py  test_aeif_psc_delta_nest.txt  test_aeif_psc_exp.py  test_all.sh  test_brunel_array.py  test_brunel_list.py  test_brunel_mpi.py  test_brunel_outdegree.py  (+34 more)
pythonlib/: Makefile.am  Makefile.in  nestgpu.py  neurongpu.py  neurongpu_linux.py  neurongpu_macOS.py
src/: Makefile  Makefile.am  Makefile.in  Makefile_macOS.am  Ny_th.h  aeif.cu  aeif.h  aeif_cond_alpha.cu  aeif_cond_alpha.h  aeif_cond_alpha_kernel.h  aeif_cond_alpha_rk5.h  aeif_cond_beta.cu  aeif_cond_beta.h  aeif_cond_beta_kernel.h  aeif_cond_beta_rk5.h  aeif_cond_beta_variables.h  aeif_derivatives.h  aeif_psc_alpha.cu  aeif_psc_alpha.h  aeif_psc_alpha_kernel.h  aeif_psc_alpha_rk5.h  aeif_psc_delta.cu  aeif_psc_delta.h  aeif_psc_delta_kernel.h  aeif_psc_delta_rk5.h  aeif_psc_exp.cu  aeif_psc_exp.h  aeif_psc_exp_kernel.h  aeif_psc_exp_rk5.h  aeif_rk5.h  aeif_variables.h  base_neuron.cu  base_neuron.h  base_neuron_ring_version.cu  connect.cu  connect.h  connect_mpi.cu  connect_mpi.h  connect_rules.cpp  connect_rules.h  (+170 more)
test_python/: brunel_del_50k.py  neuralgpu.py  test_python.m  test_python.py
tests/: make_test_connections.sh  make_test_neuron_groups.sh  test_connections.cpp  test_neuron_groups.cpp
(+14 files in other folders)
