python_PYTHON = neurongpu.py
#pkgpython_PYTHON = pippo.py
#pkgpyexec_LTLIBRARIES = pippo.pyc
#pyexec_LTLIBRARIES = _neurongpu.la
#bin_SCRIPTS = neurongpu
#pkgpython_PYTHON = pluto.py
#__init__.py
#pkgpyexec_LTLIBRARIES = libpluto.la
#libpluto_la_SOURCES = dummyfile.cpp
#libpluto_la_CPPFLAGS = -shared
#libpluto_la_LDFLAGS = -module
